# mastodon_trend_analyzer

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  server.py  settings.py
alembic/: env.py
alembic/versions/: 2023-01-23-16-46-10_5c17476b0330_initial_schema.py  2023-06-21-21-44-11_f83b8c2d9a66_add_raw_statuses_table.py
app/api/controllers/: __init__.py  accounts_controller.py  favicon_controller.py  instances_controller.py  trends_controller.py
app/api/models/: account_model.py  instance_model.py  status_model.py  trend_model.py
app/api/serializers/: accounts.py  instances.py  trends.py
app/api/services/: accounts_service.py  instance_service.py  stream_service.py  trends.py  trends_service.py
app/api/utils/: similarity_checker.py
app/core/: cors.py  database.py  options.py
app/core/extentions/: exceptions.py  middlewares.py
app/core/helpers/: base_entities.py  base_models.py  httpx_client.py  jsonapi.py  mastodon_social_client.py  rest_helper.py  serializer.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx
frontend/src/pages/About/: About.jsx
frontend/src/pages/Home/: Home.jsx
frontend/src/pages/Home/components/: current-trends-table.js  intances-table.js  suspicious-accounts-table.js  suspicious-trends-table.js
